--- a/Rapidpago/src/main/resources/templates/experience/experience-list.html
+++ b/Rapidpago/src/main/resources/templates/experience/experience-list.html
@@ -13,25 +13,25 @@
 	<div><a href="../"><h2>Empleados Rapidpago </h2></a> </div>
 		<br> 
 		<div>
-			<a href="department/save/0" class="btn btn-primary">Agregar</a>
+			<a href="experience/save/0" class="btn btn-primary">Agregar</a>
 		</div>
 		<br>
 			<h2 th:if="${list.isEmpty()}">No hay datos para mostrar.</h2>
 			<div th:if="${!list.isEmpty()}">
-				<h2>Departamentos de la empresa</h2>
+				<h2>Experciencia</h2>
 				<table class="table">
 					<thead>
 						<tr>
-							<th>Nombre</th>
+							<th>Descripcion</th>
 							<th></th>
 				 			<th></th>
 				 		</tr>
 				 	</thead>
 				 	<tbody>
-				 		<tr th:each="department : ${list}">
-				 			<td th:text="${department.name}">
-				 			<td><a class="btn btn-danger" th:href="@{/department/delete/{id}(id=${department.id})}">Eliminar</a></td>
-				 			<td><a class="btn btn-info" th:href="@{/department/save/{id}(id=${department.id})}">Editar</a></td>
+				 		<tr th:each="experience : ${list}">
+				 			<td th:text="${experience.description}">
+				 			<td><a class="btn btn-danger" th:href="@{/experience/delete/{id}(id=${experience.id})}">Eliminar</a></td>
+				 			<td><a class="btn btn-info" th:href="@{/experience/save/{id}(id=${experience.id})}">Editar</a></td>
 				 	</tbody>
 					
 				</table>
