--- a/Rapidpago/src/main/resources/templates/index.html
+++ b/Rapidpago/src/main/resources/templates/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
 	<div class="container">
-				<h2>Empleados Rapidpago</h2>
+			<h2>Empleados Rapidpago</h2>
+			
 			
 			<div><a href="/person">PERSONAS</a></div>
 			
 			<div><a href="/employee">EMPLEADOS</a></div>
+			
+			<div><a href="/department">DEPARTAMENTOS</a></div>
+			
+			<div><a href="/experience">EXPERIENCIA</a></div>
 	</div>
 </body>
 </html>
