--- a/Rapidpago/src/main/resources/templates/experience/experience-list.html
+++ b/Rapidpago/src/main/resources/templates/experience/experience-list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Person</title>
+<title>Rapidpago-Experience List</title>
 
 <!--  Bootstrap CSS -->
 <link href="../static/bootstrap-4.4.1-dist/css/bootstrap.css" rel="stylesheet" th:href="@{/bootstrap-4.4.1-dist/css/bootstrap.css}">
