--- a/Rapidpago/src/main/resources/templates/employee/employee-list1.html
+++ b/Rapidpago/src/main/resources/templates/employee/employee-list1.html
@@ -36,14 +36,16 @@
 				 	<tbody>
 				 		<tr th:each="employee : ${list}">
 				 		<!-- Datos personales del empleado -->
-				 			<td th:text="${employee.person.name + ' ' + employee.person.lastname}">
-				 			<td th:text="${employee.department.name}">
-				 			<td th:text="${employee.experience.description}">
-				 			<td th:text="${employee.address}">
-				 			<td th:text="${employee.admissionDate}">
-				 			<td th:text="${employee.status}">
-				 			<td><a class="btn btn-danger" th:href="@{/employee/delete/{id}(id=${employee.id})}">Eliminar</a></td>
-				 			<td><a class="btn btn-info" th:href="@{/employee/save/{id}(id=${employee.id})}">Editar</a></td>
+				 			<td th:text="${person.name + ' ' 
+				 						 + person.lastname +' '
+				 						 + person.identificationNum}">
+				 			<td th:text="${department.name}">
+				 			<td th:text="${experience.description}">
+				 			<td th:text="${address}">
+				 			<td th:text="${admissionDate}">
+				 			<td th:text="${status}">
+				 			<td><a class="btn btn-danger" th:href="@{/employee/delete/{id}(id=${person.id})}">Eliminar</a></td>
+				 			<td><a class="btn btn-info" th:href="@{/employee/save/{id}(id=${person.id})}">Editar</a></td>
 				 	</tbody>
 					
 				</table>
