se inhabilito la entidad PERSONA ya que se identificaron sus atributos directamente dentro de la entidad EMPLEADO..
se modifico el formulario para registrar todos los datos de empelado y
funciona correctamente.

se configuraron las vistas para las modificaciones antes mencionadas

falta la capacidad de habilitar o desabilitar un empleado.

falta mejor diseño

falta DATATABLES

--- a/Rapidpago/src/main/resources/templates/employee/employee-list.html
+++ b/Rapidpago/src/main/resources/templates/employee/employee-list.html
@@ -23,12 +23,15 @@
 				<table class="table">
 					<thead>
 						<tr>
-							<th>Datos personales</th>
+							<th>Nombre</th>
+							<th>Apellido</th>
+							<th>Genero</th>
+							<th>Numero de identificacion</th>
 							<th>Departamento</th>
 							<th>Experiencia</th>
 							<th>Direccion</th>
 							<th>Fecha de ingreso</th>
-							<th>Estado</th>
+							<th>Disponibilidad</th>
 							<th></th>
 				 			<th></th>
 				 		</tr>
@@ -36,12 +39,15 @@
 				 	<tbody>
 				 		<tr th:each="employee : ${list}">
 				 		<!-- Datos personales del empleado -->
-				 			<td th:text="${employee.person.name + ' ' + employee.person.lastname}">
+				 			<td th:text="${employee.name}">
+				 			<td th:text="${employee.lastname}">
+				 			<td th:text="${employee.gender}">
+				 			<td th:text="${employee.identificationNum}">
 				 			<td th:text="${employee.department.name}">
 				 			<td th:text="${employee.experience.description}">
 				 			<td th:text="${employee.address}">
 				 			<td th:text="${employee.admissionDate}">
-				 			<td th:text="${employee.status}">
+				 			<td th:text="${employee.available}">
 				 			<td><a class="btn btn-danger" th:href="@{/employee/delete/{id}(id=${employee.id})}">Eliminar</a></td>
 				 			<td><a class="btn btn-info" th:href="@{/employee/save/{id}(id=${employee.id})}">Editar</a></td>
 				 	</tbody>
